loinc import fix